finished up to problem 8

--- a/modularity2.html
+++ b/modularity2.html
@@ -19,7 +19,7 @@
 	    		<p class="instruction-text">Center multiple arbitrary elements horizontally, with padding.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-						<div>
+						<div class="horizspace">
 							<img src="http://placehold.it/160">
 							<img src="http://placehold.it/160">
 							<img src="http://placehold.it/160">
@@ -30,10 +30,10 @@
 	    		<p class="instruction-text">Works with different HTML...</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-						<div>
+						<div class="horizspace2">
 							<img src="http://placehold.it/120">
 							<img src="http://placehold.it/160">
-				    	<p>Oh hello</p>
+				    		<p>Oh hello</p>
 							<img src="http://placehold.it/80">
 							<ol>
 								<li>Ready</li>
@@ -52,7 +52,7 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 						<div>
-							<div>
+							<div class="vertspace">
 								<img src="http://placehold.it/50">
 								<img src="http://placehold.it/50">
 								<img src="http://placehold.it/50">
@@ -65,10 +65,10 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 			    	<div>
-							<div>
+							<div class="vertspace2">
 								<img src="http://placehold.it/50">
 								<img src="http://placehold.it/20">
-					    	<p>Oh hello</p>
+					    		<p>Oh hello</p>
 								<img src="http://placehold.it/30">
 								<ol>
 									<li>Ready</li>
@@ -87,7 +87,7 @@
 	    		<p class="instruction-text">Make the list items horizontal instead of vertical.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<ul>
+			    	<ul class="horizlist">
 							<li>Ready</li>
 							<li>Fire</li>
 							<li>Aim</li>
