CSS for number 9 complete

--- a/modularity2.html
+++ b/modularity2.html
@@ -100,12 +100,12 @@
   				<h1 class="instruction-title">Buttons</h1>
 
 	    		<p class="instruction-text">Create a set of different-sized buttons.</p>
-					<div class="instruction-answer">
-			    	<!-- Edit here -->
-			    	<a href="#">Buy Now</a>
-			    	<a href="#">Learn More</a>
-			    	<a href="#">OK</a>
-				    <!-- End editable area -->
+				<div class="instruction-answer">
+			    	<div class="buttons1">
+			    		<a class ="b1" href="#">Buy Now</a>
+			    		<a class="b2" href="#">Learn More</a>
+			    		<a class="b3" href="#">OK</a>
+				    </div>
 			    </div>
 
 	    		<p class="instruction-text">Should work with both &lt;a&gt;, &lt;button&gt;, and &lt;submit&gt; elements.</p>
